syntax = "proto3";
package cli;
option go_package="../cli";


message SumRequest {
    int64 a = 1;
    int64 b = 2;
}

message SumResponse {
    int64 r = 1;
}


service AddHelper {
    rpc Sum(SumRequest) returns (SumResponse);
}
